Increase critical section timeout in resharding test fixture

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.0.0-rc0
    • Affects Version/s: None
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding 2021-04-05
    • 62
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In SERVER-53923 we added reshardingCriticalSectionTimeout with a default value of 5 seconds. This value is too aggressive and causes some test failures - we could set this value to 24 hours for resharding_test_fixture so that we'll get a stack trace if the critical section takes too long.

            Assignee:
            Lamont Nelson
            Reporter:
            Lamont Nelson
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: