SERVER-55730: increase value of resharding critical section test fixture to 24hr